#60 fixed bug #58 added extension to support more flexible verification - and added plugins for coverage and checkstyle however coverage restrictions are not yet set as some classes do not meet the required targets